# graph-of-thoughts

./: AUGMENT_CODE_MCP_INTEGRATION.md  CLEANUP_SUMMARY.md  FULL_PATH_CONFIGURATION_GUIDE.md  MCP_CLIENT_TROUBLESHOOTING.md  MCP_MIGRATION_GUIDE.md  MCP_REFACTORING_SUMMARY.md  QUICK_FIX_SPACES_IN_PATH.md  README.md  RELEASE_SUMMARY.md  debug_claude_config.py  generate_mcp_configs.py  pyproject.toml  setup_augment_code_mcp.py  test_mcp_integration.py  test_mcp_minimal.py  validate_mcp_setup.py
docs/: API_REFERENCE.md  BATCH_PROCESSING.md  BATCH_PROCESSING_QUICK_REFERENCE.md  CONNECTION_POOLING.md  EVENT_LOOP_OPTIMIZATION.md  INTELLIGENT_CACHING.md  MCP_CIRCUIT_BREAKER.md  MCP_CONFIGURATION_VALIDATION.md  MCP_METRICS.md  MCP_PLUGIN_SYSTEM.md  MCP_SERVER.md  MIGRATION_GUIDE.md  RETRY_AND_BACKOFF.md  TOKEN_ESTIMATION_IMPROVEMENTS.md  TROUBLESHOOTING_GUIDE.md
examples/: batch_performance_benchmark.py  batch_processing_demo.py  caching_demo.py  mcp_circuit_breaker_demo.py  mcp_config_validation_example.py  mcp_config_with_caching.json  mcp_metrics_example.py  mcp_plugin_system_demo.py  mcp_server_config_examples.json  migration_examples.py  simple_batch_example.py
examples/doc_merge/: doc_merge.py  plot.py
examples/keyword_counting/: dataset_gen_countries.py  keyword_counting.py  plot.py
examples/set_intersection/: dataset_gen_intersection.py  plot.py  set_intersection_032.py  set_intersection_064.py  set_intersection_128.py  utils.py
examples/sorting/: plot.py  sorting_032.py  sorting_032_mcp.py  sorting_064.py  sorting_128.py  utils.py
graph_of_thoughts/: __init__.py  __main__.py  mcp_server.py  mcp_server_config.json
graph_of_thoughts/controller/: controller.py
graph_of_thoughts/language_models/: README.md  README_MCP.md  __init__.py  abstract_language_model.py  caching.py  chatgpt.py  llamachat_hf.py  mcp_circuit_breaker.py  mcp_client.py  mcp_config_template.json  mcp_config_with_metrics_template.json  mcp_host_plugins.py  mcp_metrics.py  mcp_plugin_manager.py  mcp_protocol.py  mcp_sampling.py  mcp_transport.py  token_estimation.py
graph_of_thoughts/operations/: __init__.py  graph_of_operations.py  operations.py  thought.py
graph_of_thoughts/parser/: __init__.py  parser.py
graph_of_thoughts/prompter/: __init__.py  prompter.py
mcpdocs/: 2025-06-18.md  clients.md  debugging.md  elicitation.md  faqs.md  inspector.md  progress.md  prompts (1).md  prompts.md  resources (1).md  resources.md  roadmap.md  roots.md  sampling.md  security_best_practices.md  server.md  tools.md  transports.md  user.md
scripts/: migrate_to_mcp.py
tests/: integration_test_framework.py  performance_benchmarks.py  run_all_tests.py  test_mcp_circuit_breaker.py  test_mcp_client.py  test_mcp_configuration_validation.py  test_mcp_integration.py  test_mcp_plugin_system.py  test_mcp_protocol_compliance.py  test_mcp_sampling.py  test_mcp_server.py  test_mcp_server_integration.py  test_mcp_server_manual.py  test_mcp_server_release_validation.py  test_mcp_transport.py  test_retry_strategies.py
